test/lattests/extensions/objects1/bad/nullVoid.lat
int main() {
    int x = (void)null;
    return 0;
}